--- a/Projeto_Blog_Pessoal/src/paginas/cadastroUsuario/CadastroUsuario.css
+++ b/Projeto_Blog_Pessoal/src/paginas/cadastroUsuario/CadastroUsuario.css
@@ -1,11 +1,16 @@
 .imagem2{
-    
-    background-image:url(https://img3.goodfon.com/wallpaper/nbig/e/94/psychedelic-fractals.jpg);
-    background-repeat: no-repeat; width:100vh; min-height:100vh; background-size:cover; background-Position:center;
+    background-image: url(https://i.imgur.com/d5bMdDJ.jpg);
+    background-repeat: no-repeat;
+    width: 100vh;
+    min-height: 100vh;
+    background-size: cover;
+    background-position: center;
 }
+
 .textos2{
     font-weight: bold !important;
 }
+
 .btnCancelar{
-    margin-right: 50px !important;
+    margin-right: 20px !important;
 }
